--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,1 +1,15 @@
-<p>map works!</p>
+<mat-card class="map-container">
+  <mat-card-header>
+    <div mat-display-4>Map</div>
+  </mat-card-header>
+  <div class="map-frame">
+    <div class="map"></div>
+  </div>
+  <mat-card-content>
+    <p>description goes here</p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-raised-button left-btn><mat-icon>arrow_circle_left</mat-icon></button>
+    <button mat-raised-button right-btn><mat-icon>arrow_circle_right</mat-icon></button>
+  </mat-card-actions>
+</mat-card>
