--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,8 @@
+@import "../node_modules/material-icons/iconfont/material-icons.css";
+// 3rd party css
+@import "~leaflet/dist/leaflet.css";
+@import "./app/scss/themes";
+@import "./app/scss/variables";
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
