initial setup complete

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -9,7 +9,11 @@
     <p>description goes here</p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button left-btn><mat-icon>arrow_circle_left</mat-icon></button>
-    <button mat-raised-button right-btn><mat-icon>arrow_circle_right</mat-icon></button>
+    <button mat-raised-button color="primary">
+      <mat-icon>arrow_circle_left</mat-icon>
+    </button>
+    <button mat-raised-button color="accent">
+      <mat-icon>arrow_circle_right</mat-icon>
+    </button>
   </mat-card-actions>
 </mat-card>
